--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0",
     "react-speech-recognition": "^4.0.0",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
