Cambio de diseño de marcadores, entre otros.

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-router-dom": "^6.30.0",
     "react-speech-recognition": "^4.0.0",
     "react-spinners": "^0.17.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-speech-recognition": "^3.9.6",
+    "@types/supercluster": "^7.1.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
